envoy.yaml
static_resources:
  listeners:
    - name: uchumi_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 1893
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/verifyCustomer"
                          route:
                            cluster: uchumi_cluster
                        - match:
                            prefix: "/GetAgentBalance"
                          route:
                            cluster: uchumi_cluster
                        - match:
                            prefix: "/GetTransactions"
                          route:
                            cluster: uchumi_cluster
                        - match:
                            prefix: "/login"
                          route:
                            cluster: uchumi_cluster
                        - match:
                            prefix: "/UchumiWallet/post_agent_login"
                          route:
                            cluster: uchumi_web
                        - match:
                            prefix: "/UchumiWallet/updatePOSpassword"
                          route:
                            cluster: uchumi_web
                        - match:
                            prefix: "/UchumiWallet/QueryTransactions"
                          route:
                            cluster: uchumi_web
                        - match:
                            prefix: "/Ucb/Balance"
                            route:
                              cluster: pos_test
                        - match:
                            prefix: "/Ucb"
                          route:
                            cluster: pos_web

                http_filters:
                  - name: envoy.router
                    typed_config: {}
  clusters:
    - name: uchumi_cluster
      connect_timeout: 3s
      type: strict_dns
      lb_policy: round_robin
      hosts:
          - socket_address:
              address: 192.168.5.20
              port_value: 1893

    - name: uchumi_web
      connect_timeout: 3s
      type: strict_dns
      lb_policy: round_robin
      hosts:
          - socket_address:
              address: uchumi_portal
              port_value: 9000

    - name: pos_web
      connect_timeout: 3s
      type: strict_dns
      lb_policy: round_robin
      hosts:
          - socket_address:
              address: pos_http
              port_value: 9080
    - name: pos_test
      connect_timeout: 3s
      type: strict_dns
      lb_policy: round_robin
      hosts:
          - socket_address:
              address: 192.168.5.20
              port_value: 9900

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
